Hopefully this fixes the header height issue on safari

--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,13 @@ html {
   font-family: "Roboto Mono", monospace;
   font-weight: 400;
   color: #231f20;
+  width: 100%;
+  height: 100%;
+}
+
+body {
+  width: 100%;
+  height: 100%;
 }
 
 .services-box {
